envoy_secure.yml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8001 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service_greeter }
          http_filters:
          - name: envoy.router

      tls_context:
        common_tls_context:
            alpn_protocols: "h2"
            tls_certificates:
            - certificate_chain: { filename: "/data/cert/pem/crt.pem" }
              private_key: { filename: "/data/cert/pem/key.pem" }

  clusters:
  - name: service_greeter
    connect_timeout: 25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: { }
    hosts: [{ socket_address: { address: greeter, port_value: 5001 }}]
    health_checks:
      - timeout: 25s
        interval: 1s
        unhealthy_threshold: 1
        healthy_threshold: 1
        grpc_health_check: { }
